tests/sksl/errors/UnscopedVariableInDoWhile.dsl.glsl
### Compilation failed:

error: unknown identifier 'foo'

1 error
